--- a/src/components/HomeTab/HomeTab.css
+++ b/src/components/HomeTab/HomeTab.css
@@ -113,7 +113,10 @@ line-height: 25px;
     background-color: transparent !important;
 }
 
-
+.heartfav{
+    height: 17px;
+    width: 18px;
+}
 
 
 
