--- a/src/components/RecentSearch/RecentSearch.css
+++ b/src/components/RecentSearch/RecentSearch.css
@@ -1,149 +1,274 @@
-.top{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    color: white;
-    margin-top: 1.5rem;
-    margin-bottom: 2%;
+.top {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  color: white;
+  margin-top: 1.5rem;
+  margin-bottom: 2%;
 }
 .modalContainer {
-    background-color: #00000036;
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+  background-color: #00000036;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 .favColumnReverse {
-    display: flex;
-    flex-direction: column-reverse;
-    gap: 1px;
+  display: flex;
+  flex-direction: column-reverse;
+  gap: 1px;
 }
 
 .overlay {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .modalContent {
-    background-color: white;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    padding: 4rem;
-    border-radius: 2px;
+  background-color: white;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  padding: 4rem;
+  border-radius: 2px;
 }
 
 .infoModal {
-    color: #000000;
-    font-family: Roboto;
-    font-size: 15px;
-    letter-spacing: 0;
-    line-height: 18px;
-    text-align: center;
+  color: #000000;
+  font-family: Roboto;
+  font-size: 15px;
+  letter-spacing: 0;
+  line-height: 18px;
+  text-align: center;
 }
 
 .modalButtons {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
 }
 
 .btnNo {
-    padding: 7px 29px;
-    color: black;
-    background-color: transparent;
-    outline: none;
-    border: none;
-    border-radius: 2px;
-    border: 1px solid #F76B1C;
-    font-size: 15px;
-    font-weight: 500;
-    letter-spacing: 0;
-    line-height: 18px;
-    text-align: center;
+  padding: 7px 29px;
+  color: black;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  border-radius: 2px;
+  border: 1px solid #f76b1c;
+  font-size: 15px;
+  font-weight: 500;
+  letter-spacing: 0;
+  line-height: 18px;
+  text-align: center;
 }
 
 .btnNo:hover {
-    background-color: #F76B1C;
-    color: white;
+  background-color: #f76b1c;
+  color: white;
 }
 
 .modalForm {
-    display: flex;
-    gap: 1rem;
+  display: flex;
+  gap: 1rem;
 }
 
 .favHeadContainer {
-    display: none;
+  display: none;
 }
 
+/* recentfavbox css */
 
-
-  /* recentfavbox css */
-
-
-
-
-
-
-  .rectangle-box{
-    width: 100%;
-    /* height: 73px; */
-    background-color:  #ffffff23;  
-    margin-bottom: 0.25%;
-    padding:2%;
-    display: flex;
-    justify-content: space-between;
+.rectangle-box {
+  width: 100%;
+  /* height: 73px; */
+  background-color: #ffffff23;
+  margin-bottom: 0.25%;
+  padding: 2%;
+  display: flex;
+  justify-content: space-between;
 }
-.rectangle-box:hover{
-    background-color:   #ffffff4c; 
+.rectangle-box p:hover {
+  background-color: #ffffff4c;
+}
+
+.rectangle-box span:hover {
+  color: #ffe539;
 }
 .temp-deg {
-    height: 38px;
-    /* width: 37px; */
-    color: #FFFFFF;
-    font-family: Roboto;
-    font-size: 32px;
-    font-weight: 500;
-    letter-spacing: 0;
-    line-height: 20px;
-  }
-  .city {
-    /* height: 19px; */
-    /* width: 124px; */
-    color: #FFFFFF;
-    font-family: Roboto;
-    font-size: 16px;
-    margin-top: 6px;
-    font-weight: 500;
-    letter-spacing: 0;
-    line-height: 19px;
-  }
-  .mid{
-    display: flex;
-    justify-content: space-between;
-    width: 30%;
-    align-items: center;
-  }
-  .favorite-heart-button {
-    height: 17px;
-    width: 18px;
-    margin-top: 8px;
-  }
-
-
-
-  @media screen and (max-width:680px) {
-.mid{
-  width: 50%;
+  height: 38px;
+  /* width: 37px; */
+  color: #ffffff;
+  font-family: Roboto;
+  font-size: 32px;
+  font-weight: 500;
+  letter-spacing: 0;
+  line-height: 20px;
+  text-decoration: no;
+}
+.city {
+  /* height: 19px; */
+  /* width: 124px; */
+  color: #ffffff;
+  font-family: Roboto;
+  font-size: 16px;
+  margin-top: 6px;
+  font-weight: 500;
+  letter-spacing: 0;
+  line-height: 19px;
+  width: 2rem;
+}
+.mid {
+  display: flex;
+  justify-content: space-between;
+  width: 30%;
+  align-items: center;
+}
+.favorite-heart-button {
+  height: 17px;
+  width: 18px;
+  margin-top: 8px;
 }
 
+.fav-sun-pic {
+  height: 38px;
+  width: 36px;
+  margin-top: -2px;
+}
+.mobile-fav {
+  display: none;
+}
+
+@media screen and (max-width: 680px) {
+  .mid {
+    width: 50%;
   }
+  .rectangle-box-mobile {
+    width: 100%;
+    margin-top: 5px;
+    height: 73px;
+    background-color: #ffffff23;
+    margin-bottom: 0.25%;
+    padding: 2%;
+    display: flex;
+    justify-content: space-between;
+  }
+  .city {
+    color: #ffe539;
+  }
+
+  .rect-mob-r {
+    display: flex;
+    flex-direction: column;
+  }
+  .mid-mobile {
+    /* height: 23px;
+  width: 167px; */
+    /* padding-bottom: 1%; */
+    display: flex;
+  }
+  .mobile-pic {
+    /* height: 23px;
+  width: 22px; */
+    margin-right: 5px;
+    margin-top: 7px;
+  }
+  .temp-deg-mobile {
+    height: 21px;
+    width: 21px;
+    color: white;
+    margin-left: 14px;
+    font-family: Roboto;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 0;
+    line-height: 21px;
+  }
+  .city-mobile {
+    margin-left: 35px;
+    margin-top: 8px;
+    height: 16px;
+    width: 100%;
+    color: #ffffff;
+    font-family: Roboto;
+    font-size: 14px;
+    letter-spacing: 0;
+    line-height: 16px;
+  }
+  .favorite-heart-button-mobile {
+    margin-top: 20px;
+    height: 17px;
+    width: 18px;
+  }
+  .rectangle-box {
+    display: none !important;
+  }
+
+  .icon-back-black {
+    height: 24px;
+    width: 24px;
+  }
+  .mobile-fav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    background: white;
+    width: 100%;
+    left: 0;
+    top: 0;
+    padding: 2rem;
+    /* height: 6rem; */
+  }
+  .fav-left {
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+  }
+  .fav-text-mobile {
+    color: #292f33;
+    font-family: Roboto;
+    font-size: 20px;
+    font-weight: 500;
+    letter-spacing: 0;
+    line-height: 24px;
+  }
+  .icon-search-white {
+    height: 24px;
+    width: 24px;
+    color: black;
+  }
+  .search-container {
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    right: 0rem;
+    bottom: 0;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 2%;
+  }
+  .search-wrapper-mobile {
+    position: relative;
+  }
+  .search-input-mobile {
+    /* background: transparent; */
+    color: black;
+    width: 90%;
+    background-color: rgba(247, 247, 247, 0.212);
+    border: none;
+    border-radius: 5px;
+    padding: 3%;
+  }
+}
