--- a/src/components/Favourite/Favourite.css
+++ b/src/components/Favourite/Favourite.css
@@ -49,6 +49,9 @@
 .rectangle-box:hover{
     background-color:   #ffffff4c; 
 }
+.rectangle-box span:hover{
+  color:#FFE539;
+}
 .temp-deg {
     height: 38px;
     /* width: 37px; */
@@ -69,6 +72,7 @@
     font-weight: 500;
     letter-spacing: 0;
     line-height: 19px;
+    width: 3rem;
   }
   .mid{
     display: flex;
@@ -89,6 +93,9 @@
   width: 36px;
   margin-top: -2px;
   }
+  .mobile-fav {
+    display: none;
+   }
   @media screen and (max-width:680px) {
 .rectangle-box-mobile{  
   width: 100%;
@@ -146,5 +153,65 @@
 }
 .rectangle-box{
   display:none !important;
+}
+.icon-back-black {
+  height: 24px;
+  width: 24px;
+ 
+}
+.mobile-fav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  background: white;
+  width: 100%;
+  left: 0;
+  top: 0;
+  padding: 2rem;
+  /* height: 6rem; */
+}
+.fav-left {
+display: flex;
+justify-content: space-between;
+gap: 2rem;
+}
+.fav-text-mobile {
+color: #292F33;
+font-family: Roboto;
+font-size: 20px;
+font-weight: 500;
+letter-spacing: 0;
+line-height: 24px;
+}
+.icon-search-white {
+  height: 24px;
+  width: 24px;
+  color: black;
+}
+.search-container{
+  position: fixed;
+  z-index: 9999;
+  top: 0;
+  left: 0;
+  right: 0rem;
+  bottom: 0;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding:2%;
+}
+.search-wrapper-mobile {
+  position: relative;
+}
+.search-input-mobile{
+  /* background: transparent; */
+  color: black;
+  width: 90%;
+  background-color: rgba(247, 247, 247, 0.212);
+  border: none;
+  border-radius: 5px;
+  padding: 3%;
 }
   }
